# refund-governance-demo

./: .gitignore  NOTICE  README.md  pyproject.toml
refund_demo/: README.md  __init__.py  generate_refund_dataset.py  refund_case.py  refund_gates.py  refund_policy.txt  refund_regimes.py  run_refund_demo.py
src/mech_gov/: __init__.py  logging_config.py
src/mech_gov/analysis/: __init__.py  figures.py
src/mech_gov/data/: banking_case.py  banking_distributions.yaml  distributions.py  generator.py  ground_truth.py  stress.py
src/mech_gov/experiment/: __init__.py  ablation.py  framing_test.py  fvs_test.py  runner.py  seed_attack.py
src/mech_gov/governance/: r1_text_only.py  r2_mechanical.py  r3_adaptive.py  regime.py
src/mech_gov/governance/policy_templates/: __init__.py  r1_system_prompt.txt  r2_system_prompt.txt
src/mech_gov/governance/primitives/: ambiguity_gate.py  cefl.py  entropy_e3.py  hard_gates.py  i6q.py
src/mech_gov/llm/: __init__.py  base.py  factory.py  registry.py
src/mech_gov/llm/providers/: __init__.py  bedrock.py  callable_provider.py  mock.py  openai_compatible.py  sagemaker.py
src/mech_gov/metrics/governance/: cdl.py  diu.py  esd.py  framing.py  fvs.py  ipi.py  scorers.py
src/mech_gov/metrics/task/: accuracy.py  deferral.py
