[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refund-governance-demo"
version = "0.1.0"
description = "Refund (chargeback) decision governance demo built on the mech-gov-framework library."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = [
    "llm",
    "ai-governance",
    "ai-safety",
    "refund",
    "decision-systems",
    "evaluation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Optional cloud backend. The core framework never imports a cloud SDK.
bedrock = ["boto3>=1.34"]
# Plotting helpers (mech_gov.analysis).
viz = ["pandas>=2.0", "matplotlib>=3.7", "seaborn>=0.13"]
# Development tooling (lint / format / type-check).
dev = ["ruff>=0.6", "black>=24.0", "mypy>=1.10"]

[project.urls]
# This project builds on the mech-gov-framework library (Apache-2.0).
"Upstream framework" = "https://github.com/SantanderAI/mech-gov-framework"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mech_gov = ["governance/policy_templates/*.txt", "data/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "refund_demo"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
